--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 COPY ./requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./main.py /app/main.py
+# COPY ./main.py /app/main.py
+COPY . /app/
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
