--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-test/.venv
-test/__pycache__
-test/.pytest_cache
+app/__pycache__
+app/models/__pycache__
+app/services/__pycache__
+app/schemas/__pycache__
+.venv
+app/tests/__pycache__
+app/tests/.pytest_cache
+/tests/__pycache__
