--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,23 @@
 version: '3.8'
 services:
   app:
-    build: ./app
+    build: .
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     ports:
       - "8000:8000"
     depends_on:
       - mongodb
+    volumes:
+      - ./app:/app
     environment:
       - MONGO_HOST=mongodb
       - MONGO_PORT=27017
       - MONGO_DB=myeventdb
       - MONGO_USER=mongo
       - MONGO_PASS=mongo
+      - PYTHONPATH=/app
   mongodb:
     image: mongo
     environment:
